examples/centralised-logging/seldon-request-logger.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: seldon-request-logger
  namespace: seldon-logs
  metadata:
    labels:
    fluentd: "true"
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
    spec:
      containers:
        - image: docker.io/seldonio/seldon-request-logger:0.3.1
          imagePullPolicy: Always
          env:
           - name: ELASTICSEARCH_HOST
             value: "elasticsearch-master.seldon-logs.svc.cluster.local"
           - name: ELASTICSEARCH_PORT
             value: "9200"
